# ctf-agent-web

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: cli.py  config.py  deps.py  local_tasks.py  loop_detect.py  message_bus.py  models.py  output_types.py  poller.py  prompts.py  sandbox.py  solver_base.py  terminal_ui.py  tracing.py
backend/agents/: coordinator_core.py  coordinator_loop.py  swarm.py  webchat_coordinator.py  webchat_solver.py
backend/chatweb/: __init__.py  base.py  chatgpt.py  parser.py  writeup_writer.py
backend/tools/: core.py
sandbox/: Dockerfile.sandbox  sandbox-tools.txt
